--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-	background: #222831;
+	background: #01041c;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
